test/Test/Compile/Error/DatasetErrors/missing.vcl
-- Test passes a reference to a non-existent dataset
dataset trainingDataset : List Rat